[gd_scene load_steps=2 format=3 uid="uid://bnryqfrxfjohl"]

[ext_resource type="Script" path="res://assets/scripts/notebook.gd" id="1_648xl"]

[node name="NotebookScene" type="Panel"]
visible = false
custom_minimum_size = Vector2(800, 600)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_648xl")

[node name="NotebookTitle" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = 10.0
offset_right = 50.0
grow_horizontal = 0
text = "Notebook"
horizontal_alignment = 1

[node name="NoteList" type="ItemList" parent="."]
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.1
anchor_right = 0.25
anchor_bottom = 0.9

[node name="AddNoteButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.92
anchor_right = 0.2
anchor_bottom = 0.98
text = "Add Note"

[node name="DeleteNoteButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.3
anchor_top = 0.92
anchor_right = 0.45
anchor_bottom = 0.98
text = "Delete Note"

[node name="NoteTitleLabel" type="Label" parent="."]
custom_minimum_size = Vector2(90, 30)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.35
anchor_top = 0.1
anchor_right = 0.35
anchor_bottom = 0.1
text = "Note Title:"
vertical_alignment = 1

[node name="NoteTitleEdit" type="LineEdit" parent="."]
custom_minimum_size = Vector2(200, 30)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.55
anchor_top = 0.1
anchor_right = 0.6
anchor_bottom = 0.1
placeholder_text = "Note Title"
caret_blink = true
caret_blink_interval = 0.5

[node name="NoteContentsLabel" type="Label" parent="."]
custom_minimum_size = Vector2(90, 30)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.35
anchor_top = 0.15
anchor_right = 0.35
anchor_bottom = 0.15
offset_top = 3.0
offset_right = 90.0
offset_bottom = 33.0
text = "Note Contents:"
vertical_alignment = 1

[node name="NoteContentsEdit" type="TextEdit" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.35
anchor_top = 0.2
anchor_right = 0.95
anchor_bottom = 0.9
placeholder_text = "Note Text"

[node name="SaveButton" type="Button" parent="."]
custom_minimum_size = Vector2(100, 30)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.55
anchor_top = 0.92
anchor_right = 0.7
anchor_bottom = 0.98
text = "Save"

[node name="ExitButton" type="Button" parent="."]
custom_minimum_size = Vector2(20, 30)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.8
anchor_top = 0.92
anchor_right = 0.95
anchor_bottom = 0.98
text = "Exit"

[connection signal="item_selected" from="NoteList" to="." method="_on_note_list_item_selected"]
[connection signal="pressed" from="AddNoteButton" to="." method="on_add_note_button_pressed"]
[connection signal="pressed" from="DeleteNoteButton" to="." method="on_delete_note_button_pressed"]
[connection signal="pressed" from="SaveButton" to="." method="on_save_button_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="on_exit_button_pressed"]
